# Jackle

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml
gui/: index.html
lib/: templates.mjs
samples/JackleSine/: CMakeLists.txt  README.md  jackle.manifest.json  jackle.mjs  package.json  wizard.mjs
samples/JackleSine/dsp/: ParamIds.h  PluginDSP.cpp  PluginDSP.h
samples/JackleSine/gui/: jackle-bridge.js
samples/JackleSine/native/vst3/: PluginController.cpp  PluginController.h  PluginEditorView_mac.h  PluginEditorView_mac.mm  PluginFactory.cpp  PluginProcessor.cpp  PluginProcessor.h  VST3ParamBridge.cpp  VST3ParamBridge.h
samples/JackleSine/scripts/: build-vst3-mac.mjs  build-wasm.mjs  build-web.mjs  clean.mjs  dev.mjs  export-vst3-mac.mjs
samples/JackleSine/web/: CMakeLists.txt  wasm-bindings.cpp
scripts/: bootstrap-emscripten.sh  export-pages.js  export-pages.sh
test/: recovery.mjs
web/: jackle-dsp.js  jackle-dsp.wasm
